<?xml version="1.0"?>
<package format="2">
  <name>cras_joy_tools</name>
  <version>1.0.0</version>
  <description>Tools for working with joysticks</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
