<?xml version="1.0"?>
<!--
SPDX-License-Identifier: BSD-3-Clause
SPDX-FileCopyrightText: Czech Technical University in Prague
-->

<package format="3">
  <name>cras_joy_tools</name>
  <version>1.0.2</version>
  <description>Joystick and gamepad handling tools.</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cras_relative_positional_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-lint</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-lint</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>roslint</test_depend>

  <doc_depend>cras_docs_common</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
